[package]
name = "bookkeep"
description = "A janky YAML based accounting application"
version = "0.1.0"
repository = "https://github.com/sidju/hired"
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde-tuple-vec-map = "*"
serde_yaml = "*"
time = { version = "*", features = ["serde-human-readable"] }
