[package]
name = "bookkeep"
description = "A janky YAML based accounting application"
version = "0.1.0"
repository = "https://github.com/sidju/hired"
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-tuple-vec-map = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["serde-human-readable"] }
rust_decimal = { version = "1.33", features = ["serde-str"] }
